<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpActivity">
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName" android:layout_marginTop="76dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:hint="@string/name" android:lineSpacingExtra="8sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:hint="@string/password" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"
            android:lineSpacingExtra="8sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:hint="@string/email" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp"
            android:lineSpacingExtra="8sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextConfirmPassword"
            android:hint="@string/confirm_password" android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:textSize="18sp"
            android:lineSpacingExtra="8sp"/>
    <Button
            android:text="@string/create_account"
            android:layout_width="238dp"
            android:layout_height="53dp"
            android:id="@+id/buttonCreateAccount" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword"
            style="@style/Widget.AppCompat.Button.Colored" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:text="@string/sign_up"
            android:layout_width="157dp"
            android:layout_height="63dp"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:fontFamily="sans-serif-thin" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.109"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="119dp"
            android:layout_height="35dp"
            android:id="@+id/buttonBackToLogin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:onClick="toLoginScreen"/>
    <TextView
            android:text="@string/have_account"
            android:layout_width="236dp"
            android:layout_height="20dp"
            android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount" android:textAlignment="center"/>
</android.support.constraint.ConstraintLayout>