<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">


    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmail"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:hint="@string/email"
            android:lineSpacingExtra="8sp" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/password" android:autofillHints=""
            android:lineSpacingExtra="8sp"/>
    <Button
            android:text="@string/sign_in"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSignIn"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.035"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/editTextPassword"
            style="@style/Widget.AppCompat.Button.Colored" android:onClick="toMainScreen"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSignUp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.035"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" android:onClick="toSignUpScreen"/>
    <Button
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonForgotPassword"
            style="@style/Widget.AppCompat.Button.Borderless" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:textSize="14sp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:textAllCaps="false"/>
    <TextView
            android:text="@string/header_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" android:fontFamily="sans-serif-thin"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>